# paper-radar

./: .gitignore  README.md  ai-science.xml  alignment-safety.xml  everything.xml  frontier-llm.xml  index.html  paper_radar_feeds.opml  pyproject.toml  reeder_feeds.opml  robotics-embodied.xml  stats.json  vision-multimodal.xml
.github/workflows/: daily.yml  tests.yml
config/: allowlist.yaml  config.yaml  feeds.yaml
src/paper_radar/: __init__.py  cli.py  config.py  feed.py  filter.py  resolver.py  run.py  state.py  stats.py  types.py
src/paper_radar/sources/: __init__.py  arxiv.py
src/paper_radar/sources/blogs/: __init__.py  _common.py  ai2.py  anthropic.py  apple_ml.py  arc_institute.py  boston_dynamics.py  deepmind.py  figure_ai.py  goodfire.py  huggingface_papers.py  meta_ai.py  microsoft_research.py  mistral.py  nvidia_research.py  openai_blog.py  physical_intelligence.py  thinking_machines.py  transformer_circuits.py
tests/: conftest.py
tests/fixtures/: arxiv_one_record.xml
tests/unit/: test_arxiv_parse.py  test_blog_adapters_registry.py  test_config.py  test_feed_xml.py  test_filter.py  test_state.py
