[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-radar"
version = "0.1.0"
description = "Curated daily RSS feeds of high-signal AI/Robotics papers."
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Miheer Patankar"}]
license = {text = "MIT"}
dependencies = [
    "pyyaml>=6.0",
    "feedgen>=1.0.0",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
paper-radar = "paper_radar.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: hits live network APIs (skipped by default)",
]
